Commit from TeleportHQ

--- a/confirmation.html
+++ b/confirmation.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>WaterMonsterProject</title>
+    <title>Confirmation - WaterMonsterProject</title>
+    <meta property="og:title" content="Confirmation - WaterMonsterProject" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,47 +48,14 @@
     <!-- <style> ... </style> -->
   </head>
   <body>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <div>
-      <link href="./blog-post-card.css" rel="stylesheet" />
-      <a href="https://google.com" target="_blank" rel="noreferrer noopener">
-        <div class="blog-post-card-blog-post-card">
-          <img
-            alt="image"
-            src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;w=400"
-            image_src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;h=1000"
-            class="blog-post-card-image"
-          />
-          <div class="blog-post-card-container">
-            <div class="blog-post-card-container1">
-              <span class="blog-post-card-text"><span>ENTERPRISE</span></span>
-              <span class="blog-post-card-text1"><span>3 days ago</span></span>
-            </div>
-            <h1 class="blog-post-card-text2">
-              <span>Lorem ipsum dolor sit amet</span>
-            </h1>
-            <span class="blog-post-card-text3">
-              <span>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
-                volutpat turpis. Mauris luctus rutrum mi ut rhoncus. Integer in
-                dignissim tortor. Lorem ipsum dolor sit amet, consectetur
-                adipiscing ...
-              </span>
-            </span>
-            <div class="blog-post-card-container2">
-              <div class="blog-post-card-profile">
-                <img
-                  alt="profile"
-                  src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDd8fHBvcnRyYWl0fGVufDB8fHx8MTYyNjM3ODk3Mg&amp;ixlib=rb-1.2.1&amp;w=200"
-                  class="blog-post-card-image1"
-                />
-                <span class="blog-post-card-text4"><span>Jane Doe</span></span>
-              </div>
-              <span class="blog-post-card-text5">Read More -&gt;</span>
-            </div>
-          </div>
-        </div>
-      </a>
+      <link href="./confirmation.css" rel="stylesheet" />
+
+      <div class="confirmation-container">
+        <form class="confirmation-form"></form>
+        <li class="list-item"><span>Text</span></li>
+      </div>
     </div>
     <script
       data-section-id="navbar"
