--- a/donate.html
+++ b/donate.html
@@ -96,10 +96,10 @@
           <div data-thq="thq-navbar-nav" class="donate-desktop-menu">
             <nav class="donate-links">
               <a href="index.html" class="donate-link navLink">Home</a>
-              <a href="about.html" class="donate-link01 navLink">About</a>
-              <a href="news.html" class="donate-link02 navLink">News</a>
-              <a href="donate.html" class="donate-link03 navLink">Donate</a>
-              <a href="#footer" class="donate-link04 navLink">Contact</a>
+              <a href="about.html" class="donate-link1 navLink">About</a>
+              <a href="news.html" class="donate-link2 navLink">News</a>
+              <a href="donate.html" class="donate-link3 navLink">Donate</a>
+              <a href="#footer" class="donate-link4 navLink">Contact</a>
             </nav>
             <div class="donate-buttons">
               <label class="donate-text">
@@ -256,54 +256,47 @@
           </div>
           <div class="donate-amount">
             <div class="donate-row">
-              <button class="donate-button button">$10</button>
-              <button class="donate-button1 button">$50</button>
+              <a href="information-input.html" class="donate-navlink5 button">
+                $10
+              </a>
+              <a href="information-input.html" class="donate-navlink6 button">
+                $50
+              </a>
             </div>
             <div class="donate-row1">
-              <button class="donate-button2 button">$100</button>
-              <a
-                href="https://www.paypal.com/us/home"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="donate-link05 button"
-              >
+              <a href="information-input.html" class="donate-navlink7 button">
+                $100
+              </a>
+              <a href="information-input.html" class="donate-navlink8 button">
                 Custom
               </a>
             </div>
           </div>
         </div>
-        <div class="donate-main">
-          <div class="donate-content1">
-            <div class="donate-hero-section">
-              <div class="donate-header1">
-                <h1 class="donate-heading1">Support Axolotl Conservation</h1>
-                <p class="donate-caption1">
-                  <span class="donate-text09">
-                    Thank you for considering a donation to the Axolotl Species
-                    Preservation Center. Your generous support is crucial in our
-                    mission to preserve and protect these remarkable creatures
-                    and their natural habitat.
-                  </span>
-                  <br class="donate-text10" />
-                  <br class="donate-text11" />
-                  <br class="donate-text12" />
-                  <br class="donate-text13" />
-                </p>
-              </div>
-              <div class="donate-buttons2"></div>
-            </div>
+        <div class="donate-hero-section">
+          <div class="donate-header1">
+            <h1 class="donate-heading1">Support Axolotl Conservation</h1>
+            <p class="donate-caption1">
+              <span class="donate-text09">
+                Thank you for considering a donation to the Axolotl Species
+                Preservation Center. Your generous support is crucial in our
+                mission to preserve and protect these remarkable creatures and
+                their natural habitat.
+              </span>
+              <br class="donate-text10" />
+            </p>
           </div>
           <img
             alt="picture of an axolotl"
-            src="public/axolotledit-200h.jpg"
+            src="public/axolotledit-1500w.jpg"
             loading="eager"
             class="donate-image1"
           />
         </div>
         <section class="donate-mission">
           <div class="donate-container08">
-            <div class="donate-content2">
-              <div class="donate-main1">
+            <div class="donate-content1">
+              <div class="donate-main">
                 <div class="donate-header2">
                   <h2 class="donate-heading2">Why Your Donation Matters</h2>
                   <p class="donate-caption2">
@@ -316,14 +309,14 @@
                 </div>
               </div>
               <div class="donate-highlights">
-                <h1 class="donate-text14">
+                <h1 class="donate-text11">
                   Your donation will directly contribute to the following
                   important initiatives:
                 </h1>
                 <ul class="donate-ul list">
                   <li class="donate-li list-item Content">
                     <span>
-                      <span class="donate-text16">Habitat Restoration:</span>
+                      <span class="donate-text13">Habitat Restoration:</span>
                       <span>
                         We work tirelessly to rehabilitate and protect the
                         natural habitats of axolotls, ensuring they have a safe
@@ -333,7 +326,7 @@
                   </li>
                   <li class="donate-li1 Content list-item">
                     <span>
-                      <span class="donate-text19">Scientific Research:</span>
+                      <span class="donate-text16">Scientific Research:</span>
                       <span>
                         Funding research projects aimed at better understanding
                         axolotls and their ecosystems, which is crucial for
@@ -343,7 +336,7 @@
                   </li>
                   <li class="donate-li2 list-item Content">
                     <span>
-                      <span class="donate-text22">Conservation Programs:</span>
+                      <span class="donate-text19">Conservation Programs:</span>
                       <span>
                         Supporting our on-the-ground conservation efforts,
                         including outreach and community engagement.
@@ -354,14 +347,11 @@
               </div>
             </div>
           </div>
-          <div class="donate-images">
-            <img
-              alt="picture of a man taking care of an axolotl"
-              src="public/mantakingcareofaxolotl-200h.jpg"
-              class="donate-image2"
-            />
-            <div class="donate-row2"></div>
-          </div>
+          <img
+            alt="picture of a man taking care of an axolotl"
+            src="public/mantakingcareofaxolotl-200h.jpg"
+            class="donate-image2"
+          />
         </section>
         <section class="donate-donation-use">
           <div class="donate-header3">
@@ -387,7 +377,7 @@
               class="accordion-element donate-element"
             >
               <div class="donate-header4">
-                <h3 class="donate-text28">Donate Today</h3>
+                <h3 class="donate-text25">Donate Today</h3>
                 <div
                   class="icon-container-icon-container icon-container-root-class-name24"
                 >
@@ -411,7 +401,7 @@
                 </div>
               </div>
               <div data-role="accordion-content" class="accordion-content">
-                <p class="donate-text29">
+                <p class="donate-text26">
                   Your support is a lifeline for axolotls. Please consider
                   making a donation today and help us secure a brighter future
                   for these unique amphibians.
@@ -474,7 +464,7 @@
           </div>
         </section>
         <section class="donate-updates">
-          <div class="donate-content4">
+          <div class="donate-content3">
             <div class="donate-details">
               <div class="donate-header5">
                 <h2 class="donate-heading4">
@@ -482,15 +472,15 @@
                   newsletter
                 </h2>
               </div>
+              <div class="donate-input">
+                <input
+                  type="text"
+                  placeholder="Email address"
+                  class="donate-textinput input"
+                />
+                <button class="donate-button button">Subscribe</button>
+              </div>
               <div class="donate-action">
-                <div class="donate-input">
-                  <input
-                    type="text"
-                    placeholder="Email address"
-                    class="donate-textinput input"
-                  />
-                  <button class="button donate-button3">Subscribe</button>
-                </div>
                 <div class="donate-agreement">
                   <div class="donate-states">
                     <div id="tos" class="donate-checkbox"></div>
@@ -546,7 +536,7 @@
                     src="public/manholdinganaxolotl-1400w.jpg"
                     class="donate-image3"
                   />
-                  <span class="donate-text30">See content like this!</span>
+                  <span class="donate-text27">See content like this!</span>
                 </div>
                 <div class="slide">
                   <img
@@ -554,7 +544,7 @@
                     src="https://images.unsplash.com/photo-1670991761566-534b07539db5?ixid=Mnw5MTMyMXwwfDF8YWxsfDEzfHx8fHx8Mnx8MTY3MTAxNTg5Ng&amp;ixlib=rb-4.0.3&amp;w=1400"
                     class="donate-image4"
                   />
-                  <span class="donate-text31">
+                  <span class="donate-text28">
                     <span>This is a test slide</span>
                     <br />
                   </span>
@@ -565,14 +555,14 @@
                     src="https://images.unsplash.com/photo-1670087670280-7a3e71a7efa6?ixid=Mnw5MTMyMXwwfDF8YWxsfDE1fHx8fHx8Mnx8MTY3MTAxNTg5Ng&amp;ixlib=rb-4.0.3&amp;w=1400"
                     class="donate-image5"
                   />
-                  <span class="donate-text34">
+                  <span class="donate-text31">
                     <span>This one also!</span>
                     <br />
                   </span>
                 </div>
               </div>
               <div class="donate-buttons-container">
-                <div class="donate-buttons3">
+                <div class="donate-buttons2">
                   <button id="previous-slide" class="donate-previous button">
                     <svg viewBox="0 0 1024 1024" class="donate-icon12">
                       <path d="M32 512l480 480v-288h512v-384h-512v-288z"></path>
@@ -599,25 +589,25 @@
               <h2 class="branding1-company-name"><span>APC</span></h2>
             </div>
             <nav class="donate-navigation-links">
-              <span class="donate-link06 navLink">Mission</span>
-              <span class="donate-link07 navLink">Take Action</span>
-              <span class="donate-link08 navLink">News</span>
-              <span class="donate-link09 navLink">Contact</span>
+              <a href="index.html" class="donate-link5 navLink">Home</a>
+              <a href="about.html" class="donate-link6 navLink">About</a>
+              <a href="news.html" class="donate-link7 navLink">News</a>
+              <a href="donate.html" class="donate-link8 navLink">Donate</a>
             </nav>
           </div>
           <div class="donate-middle">
-            <span class="donate-text37">
-              <span class="donate-text38">Axolotl Preservation Center</span>
+            <span class="donate-text34">
+              <span class="donate-text35">Axolotl Preservation Center</span>
+              <br class="donate-text36" />
+              <br class="donate-text37" />
+              <span class="donate-text38">123 Preservation Lane</span>
               <br class="donate-text39" />
-              <br class="donate-text40" />
-              <span class="donate-text41">123 Preservation Lane</span>
+              <span class="donate-text40">Habitatville, Axoland</span>
+              <br class="donate-text41" />
               <br class="donate-text42" />
-              <span class="donate-text43">Habitatville, Axoland</span>
+              <span class="donate-text43">info@axolotlcenter.org</span>
               <br class="donate-text44" />
-              <br class="donate-text45" />
-              <span class="donate-text46">info@axolotlcenter.org</span>
-              <br class="donate-text47" />
-              <span class="donate-text48">(123) 456-7890</span>
+              <span class="donate-text45">(123) 456-7890</span>
             </span>
           </div>
           <div class="donate-bottom">
