--- a/index.html
+++ b/index.html
@@ -260,9 +260,6 @@
               class="home-image1"
             />
           </div>
-          <div class="home-details-container">
-            <div class="home-details"></div>
-          </div>
         </section>
         <section class="home-mission">
           <div class="home-container08">
@@ -300,14 +297,12 @@
               </div>
             </div>
           </div>
-          <div class="home-images">
-            <img
-              alt="Picture of a man taking care of an axolotl"
-              src="public/mantakingcareofaxolotl-200h.jpg"
-              loading="eager"
-              class="home-image2"
-            />
-          </div>
+          <img
+            alt="Picture of a man taking care of an axolotl"
+            src="public/mantakingcareofaxolotl-200h.jpg"
+            loading="eager"
+            class="home-image2"
+          />
         </section>
         <section class="home-help">
           <div class="home-help-content">
@@ -351,15 +346,15 @@
                   </div>
                 </div>
                 <div class="home-button">
-                  <button class="button">
+                  <button class="home-button1 button">
                     <span class="home-text18">Take Action</span>
                   </button>
-                  <button class="button">
+                  <button class="home-button2 button">
                     <span class="home-text19">Learn More</span>
                   </button>
                 </div>
               </div>
-              <div class="home-images1">
+              <div class="home-images">
                 <img
                   alt="Picture of a happy axolotl"
                   src="public/happyaxolotl-1500w.webp"
@@ -431,7 +426,7 @@
         </div>
         <section class="home-updates">
           <div class="home-content5">
-            <div class="home-details1">
+            <div class="home-details">
               <div class="home-header4">
                 <h2 class="home-heading4">
                   Get updates and action alerts from APC by joining our
@@ -445,7 +440,7 @@
                     placeholder="Email address"
                     class="home-textinput input"
                   />
-                  <button class="button home-button8">Subscribe</button>
+                  <button class="home-button8 button">Subscribe</button>
                 </div>
                 <div class="home-agreement">
                   <div class="home-states">
@@ -549,10 +544,10 @@
               <h2 class="branding-company-name"><span>APC</span></h2>
             </div>
             <nav class="home-navigation-links">
-              <a href="index.html" class="home-link5 navLink">Mission</a>
-              <a href="index.html" class="home-link6 navLink">Take Action</a>
-              <a href="index.html" class="home-link7 navLink">News</a>
-              <a href="index.html" class="home-link8 navLink">Contact</a>
+              <a href="index.html" class="home-link5 navLink">Home</a>
+              <a href="about.html" class="home-link6 navLink">About</a>
+              <a href="news.html" class="home-link7 navLink">News</a>
+              <a href="donate.html" class="home-link8 navLink">Donate</a>
             </nav>
           </div>
           <div class="home-middle">
