--- a/news.html
+++ b/news.html
@@ -231,7 +231,7 @@
           </div>
         </header>
         <section class="news-hero">
-          <div class="news-blog">
+          <section class="news-blog">
             <div class="news-container08">
               <a href="index.html" class="news-navlink5"></a>
               <a
@@ -402,13 +402,14 @@
                 </div>
               </a>
             </div>
-          </div>
+          </section>
         </section>
         <div class="news-content">
           <div class="news-details">
             <div class="news-header">
               <h2 class="news-heading">
-                Get updates and action alerts from APC by joining our newsletter
+                Join our Newsletter to Get The Latest News on Axolotl
+                Preservation!&nbsp;
               </h2>
             </div>
             <div class="news-action">
@@ -418,7 +419,7 @@
                   placeholder="Email address"
                   class="news-textinput input"
                 />
-                <button class="button news-button">Subscribe</button>
+                <button class="news-button button">Subscribe</button>
               </div>
               <div class="news-agreement">
                 <div class="news-states">
@@ -549,10 +550,10 @@
               <h2 class="branding1-company-name"><span>APC</span></h2>
             </div>
             <nav class="news-navigation-links">
-              <span class="news-link5 navLink">Mission</span>
-              <span class="news-link6 navLink">Take Action</span>
-              <span class="news-link7 navLink">News</span>
-              <span class="news-link8 navLink">Contact</span>
+              <a href="index.html" class="news-link5 navLink">Home</a>
+              <a href="about.html" class="news-link6 navLink">About</a>
+              <a href="news.html" class="news-link7 navLink">News</a>
+              <a href="donate.html" class="news-link8 navLink">Donate</a>
             </nav>
           </div>
           <div class="news-middle">
