--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
           <div data-thq="thq-navbar-nav" class="about-desktop-menu">
             <nav class="about-links">
               <a href="index.html" class="about-link navLink">Home</a>
-              <a href="about.html" class="about-link01 navLink">About</a>
-              <a href="news.html" class="about-link02 navLink">News</a>
-              <a href="donate.html" class="about-link03 navLink">Donate</a>
-              <a href="#footer" class="about-link04 navLink">Contact</a>
+              <a href="about.html" class="about-link1 navLink">About</a>
+              <a href="news.html" class="about-link2 navLink">News</a>
+              <a href="donate.html" class="about-link3 navLink">Donate</a>
+              <a href="#footer" class="about-link4 navLink">Contact</a>
             </nav>
             <div class="about-buttons">
               <label class="about-text">
@@ -198,39 +198,14 @@
             </nav>
           </div>
         </header>
-        <div class="about-content">
-          <div class="about-header">
-            <span class="about-heading">Donate Now!</span>
-            <span class="about-caption">
-              Every Donation Helps Save an Axolotl!
-            </span>
-          </div>
-          <div class="about-amount">
-            <div class="about-row">
-              <button class="about-button button">$10</button>
-              <button class="about-button1 button">$50</button>
-            </div>
-            <div class="about-row1">
-              <button class="about-button2 button">$100</button>
-              <a
-                href="https://www.paypal.com/us/home"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="about-link05 button"
-              >
-                Custom
-              </a>
-            </div>
-          </div>
-        </div>
         <div class="about-main">
-          <div class="about-content1">
+          <div class="about-content">
             <div class="about-hero-section">
-              <div class="about-header1">
-                <h1 class="about-heading1">
+              <div class="about-header">
+                <h1 class="about-heading">
                   About the Axolotl Species Preservation Center
                 </h1>
-                <p class="about-caption1">
+                <p class="about-caption">
                   At the Axolotl Species Preservation Center, our passion is the
                   preservation and conservation of one of the world's most
                   extraordinary creatures—the axolotl. Our organization was
@@ -263,14 +238,14 @@
                 src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDE1fHxwb3RyYWl0fGVufDB8fHx8MTY3MDkyNjgxNQ&amp;ixlib=rb-4.0.3&amp;w=200"
                 class="about-image2"
               />
-              <p class="about-caption2">Michael Belfort, APC Founder</p>
+              <p class="about-caption1">Michael Belfort, APC Founder</p>
             </div>
           </div>
         </section>
         <section class="about-donation-use">
-          <div class="about-header2">
-            <h2 class="about-heading2">Who We Are</h2>
-            <p class="about-caption3">
+          <div class="about-header1">
+            <h2 class="about-heading1">Who We Are</h2>
+            <p class="about-caption2">
               We are a dedicated team of biologists, conservationists,
               researchers, and passionate individuals who share a deep
               commitment to the axolotl and its environment. Our expertise,
@@ -283,7 +258,7 @@
               data-role="accordion-container"
               class="accordion-element about-element"
             >
-              <div class="about-header3">
+              <div class="about-header2">
                 <h3 class="about-text10">What We Do</h3>
               </div>
             </div>
@@ -291,7 +266,7 @@
               data-role="accordion-container"
               class="accordion-element about-element1"
             >
-              <div class="about-header4">
+              <div class="about-header3">
                 <h3 class="about-text11">Habitat Preservation</h3>
                 <div
                   class="icon-container-icon-container icon-container-root-class-name35"
@@ -327,7 +302,7 @@
               data-role="accordion-container"
               class="accordion-element about-element2"
             >
-              <div class="about-header5">
+              <div class="about-header4">
                 <h3 class="about-text13">Scientific Research</h3>
                 <div
                   class="icon-container-icon-container icon-container-root-class-name36"
@@ -364,7 +339,7 @@
               data-role="accordion-container"
               class="accordion-element about-element3"
             >
-              <div class="about-header6">
+              <div class="about-header5">
                 <h3 class="about-text15">Conservation Initiatives</h3>
                 <div
                   class="icon-container-icon-container icon-container-root-class-name37"
@@ -478,10 +453,10 @@
           </div>
         </div>
         <section class="about-updates">
-          <div class="about-content5">
+          <div class="about-content4">
             <div class="about-details">
-              <div class="about-header7">
-                <h2 class="about-heading3">
+              <div class="about-header6">
+                <h2 class="about-heading2">
                   Get updates and action alerts from APC by joining our
                   newsletter
                 </h2>
@@ -493,7 +468,7 @@
                     placeholder="Email address"
                     class="about-textinput input"
                   />
-                  <button class="button about-button3">Subscribe</button>
+                  <button class="about-button button">Subscribe</button>
                 </div>
                 <div class="about-agreement">
                   <div class="about-states">
@@ -506,7 +481,7 @@
                       </svg>
                     </div>
                   </div>
-                  <div class="about-caption4">
+                  <div class="about-caption3">
                     <label for="tos" class="about-normal">I agree to the</label>
                     <label for="tos" class="about-bold">
                       Terms and Conditions
@@ -625,10 +600,10 @@
               <h2 class="branding1-company-name"><span>APC</span></h2>
             </div>
             <nav class="about-navigation-links">
-              <span class="about-link06 navLink">Mission</span>
-              <span class="about-link07 navLink">Take Action</span>
-              <span class="about-link08 navLink">News</span>
-              <span class="about-link09 navLink">Contact</span>
+              <a href="index.html" class="about-link5 navLink">Home</a>
+              <a href="about.html" class="about-link6 navLink">About</a>
+              <a href="news.html" class="about-link7 navLink">News</a>
+              <a href="donate.html" class="about-link8 navLink">Donate</a>
             </nav>
           </div>
           <div class="about-middle">
